--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.plant-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.text {
+  width: 200px;
+  text-align: center;
+}
+
+.plant > img {
+  display: block;
+  margin: 0 auto;
 }
 
 /* do not edit this footer */
